@startuml
interface Service {
  +Request(user: string): string
}

class RealService {
  +Request(user: string): string
}

class AuthProxy {
  -realService: RealService
  -allowedUser: string
  +Request(user: string): string
}

class Client {
  +main(): void
}

Service <|.. RealService
Service <|.. AuthProxy
AuthProxy o-- RealService
Client --> Service : usa
@enduml